# QuantriX

./: .gitignore  README.md
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/api/: client.ts
frontend/src/app/: App.tsx
frontend/src/app/modes/: AnalysisMode.tsx  DataMode.tsx  ReportMode.tsx
frontend/src/features/charts/: ChartPanel.tsx
frontend/src/features/data/: DataTable.tsx  ImportDropzone.tsx  VariableCards.tsx
frontend/src/store/: dataset.ts
python/: pyproject.toml
python/dag/: graph.py  tracker.py
python/dag/exporters/: python.py  r.py  syntax.py
python/quantrix/: __init__.py
python/quantrix/core/: __init__.py  dataset.py  metadata.py  protocol.py  provenance.py  types.py
python/quantrix/dag/: graph.py  tracker.py
python/quantrix/dag/exporters/: python.py  r.py  syntax.py
python/quantrix/data/: profile.py
python/quantrix/data/inference/: missing_detector.py  type_detector.py
python/quantrix/data/readers/: base.py  csv.py  sav.py
python/quantrix/interpreter/: engine.py  template_registry.py
python/quantrix/planner/: decision_tree.py  question_parser.py  recommendation.py
python/quantrix/report/: generator.py
python/quantrix/safety/: engine.py
python/quantrix/safety/rules/: homogeneity.py  multiple_comparison.py  normality.py  outliers.py  sample_size.py  type_match.py
python/quantrix/server/: app.py  cli.py  registry.py
python/quantrix/server/routes/: analysis.py  chat.py  dag.py  data.py  report.py  safety.py
python/quantrix/stats/: base.py  registry.py
python/quantrix/stats/comparison/: __init__.py
python/quantrix/stats/correlation/: __init__.py
python/quantrix/stats/descriptive/: __init__.py
python/quantrix/stats/regression/: __init__.py
python/quantrix/viz/: __init__.py
python/tests/: conftest.py
python/tests/integration/: test_analysis_api.py  test_api.py  test_chat_api.py  test_safety_api.py  test_stats_engine.py
python/tests/unit/dag/: test_dag.py
python/tests/unit/data/: test_csv_reader.py  test_missing_detector.py  test_profile.py  test_sav_reader.py  test_type_detector.py
python/tests/unit/interpreter/: test_interpreter.py
python/tests/unit/planner/: test_decision_tree.py  test_question_parser.py
python/tests/unit/report/: test_report.py
python/tests/unit/safety/: test_rules.py
