[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantrix"
version = "0.1.0.dev0"
description = "AI-Native Quantitative Research Platform for Social Sciences"
readme = "../README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.12"
authors = [
    {name = "Quantrix Contributors"},
]
keywords = [
    "statistics",
    "social-science",
    "quantitative-research",
    "spss",
    "open-science",
    "reproducibility",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]

# ── Core dependencies (Phase 1) ────────────────────────────────────────
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "pyreadstat>=1.2",
    "openpyxl>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

# ── Optional dependency groups ──────────────────────────────────────────
[project.optional-dependencies]
stats = [
    "scipy>=1.12",
    "statsmodels>=0.14",
]
viz = [
    "altair>=5.0",
    "plotly>=5.0",
]
llm = [
    "openai>=1.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "quarto-cli>=1.5",
]
all = [
    "quantrix[stats,viz,llm,dev,docs]",
]

# ── Entry points (plugin discovery) ─────────────────────────────────────
[project.entry-points."quantrix.readers"]
".sav" = "quantrix.data.readers.sav:SpssReader"
".csv" = "quantrix.data.readers.csv:CsvReader"
".xlsx" = "quantrix.data.readers.excel:ExcelReader"
".dta" = "quantrix.data.readers.dta:StataReader"

[project.scripts]
quantrix = "quantrix.server.cli:main"

# ── Tool configs ────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["quantrix"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=quantrix",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "spss_parity: marks tests that validate against SPSS output",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["quantrix"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
